tests/files/lexer_tests/should_fail/018.cmdr
// Illegal character in string (ascii 18)
var = '';